# dy_gh_filewallball

./: .coveragerc  .dockerignore  .env.dev  .env.example  .env.prod  .env.simple  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLEANUP_FINAL_REPORT.md  CONTRIBUTING.md  DB_CONNECTION_STATUS.md  Dockerfile  Dockerfile.backup  Dockerfile.test  Dockerfile.test.pytest  FUNCTIONAL_TEST_REPORT.md  INSTALL.md  LICENSE  MARIADB_SETUP.md  Makefile  Makefile.test  README-Docker.md  README.md  README_SIMPLE.md  SECURITY_ENHANCEMENT_SUMMARY.md  TEST_KEYGEN_UPLOAD.md  TEST_README.md  alembic.ini  check_db_projects.py  create_ip_auth_tables.py  create_tables_direct.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  env.example  filewallball.db  filewallball_api_documentation.html  hpa-filewallball.yaml  (+43 more)
.taskmaster/: state.json
.taskmaster/docs/: container-test-prd.txt  prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_009_container-test.txt  task_010.txt  task_010_container-test.txt  task_011.txt  task_011_container-test.txt  task_012.txt  task_012_container-test.txt  task_013.txt  task_013_container-test.txt  task_014.txt  task_014_container-test.txt  task_015.txt  task_015_container-test.txt  task_016.txt  task_016_container-test.txt  task_017_container-test.txt  task_018_container-test.txt  (+10 more)
alembic/: async_env.py  env.py
app/: __init__.py  async_redis_client.py  cache_invalidation.py  cache_models.py  config.py  database.py  main.py  main_legacy.py  main_new.py  main_simple.py  metrics.py  redis_client.py  redis_pool_config.py
backups/: dump.rdb
docs/: DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENVIRONMENT_CONFIGURATION.md  INFRASTRUCTURE_CHECKLIST.md  KEYGEN_ENDPOINT_SUMMARY.md  KEYGEN_TEST_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  SQLITE_CLEANUP_REPORT.md  TESTING_GUIDE.md  TEST_RESULTS_REPORT.md  V1_CLEANUP_SUMMARY.md  acid-transactions.md  api-endpoints-guide.md  backup-recovery-guide.md  backup-recovery.md  database-setup-guide.md  database_helpers_usage.md  deployment-operations-guide.md  error-handling-recovery-guide.md  file-storage-path-mapping-guide.md  file-validation-processing-guide.md  filewallball_api_documentation.html  logging-guide.md  monitoring-metrics-guide.md  performance-optimization-guide.md  performance-optimization.md  project-overview.md  redis-caching-policy.md  redis-client-guide.md  redis-monitoring-guide.md  security-authentication-guide.md  services-architecture-guide.md  swagger-api-documentation-guide.md  testing-framework-guide.md
k8s/: 01-namespace-rbac.yaml  02-app-config-secret.yaml  03-app-deployment-service.yaml  03-app-pvc.yaml  04-backup-cronjob.yaml  04-backup-pv.yaml  04-backup-pvc.yaml  04-backup-serviceaccount.yaml  05-mariadb-configmap.yaml  05-mariadb-deployment.yaml  05-mariadb-init-script.yaml  05-mariadb-pvc.yaml  05-mariadb-role.yaml  05-mariadb-rolebinding.yaml  05-mariadb-secret.yaml  05-mariadb-service.yaml  05-mariadb-serviceaccount.yaml  06-redis-configmap.yaml  06-redis-deployment.yaml  06-redis-exporter-deployment.yaml  06-redis-exporter-service.yaml  06-redis-master-statefulset.yaml  06-redis-monitoring-configmap.yaml  06-redis-pvc.yaml  06-redis-rbac.yaml  06-redis-secret.yaml  06-redis-sentinel-configmap.yaml  06-redis-sentinel-deployment.yaml  06-redis-services.yaml  06-redis-slave-statefulset.yaml  07-prometheus-configmap.yaml  07-prometheus-deployment.yaml  08-grafana-dashboards.yaml  08-grafana-datasources.yaml  08-grafana-deployment.yaml  09-storage-pv.yaml  09-storage-pvc.yaml  10-test-pod.yaml  10-test-volume-pod.yaml  11-config-health-check.yaml  (+58 more)
nginx/: nginx.conf
scripts/: README.md  async_alembic.py  backup-database.sh  backup-enhanced.sh  backup-volumes.sh  backup.sh  deploy.sh  dev.sh  health-check.sh  init-database.sh  init-db-dev.sql  init-db.sql  log-monitor.sh  migration_manager.py  monitor.sh  performance_test.py  redis-caching-policy.sh  redis-performance-monitor.sh  redis-performance-test.py  restore-database.sh  restore-enhanced.sh  restore-volumes.sh  run-container-tests.sh  service-manager.sh  setup-database.sh  start_simple.sh  test-api.sh  test-db-connection.sh  test-full-workflow.sh  test-quick.sh  test_config.py  test_dependencies.py  test_enhanced_database.py  test_orm_models.py  test_redis_client.py  test_routers.py  ubuntu-production-installer.sh  verify_setup.py  verify_structure.py
sql/: acid_transactions.sql  filewallball_schema.sql  init.sql  performance_optimization.sql  performance_optimization_fixed.sql  performance_test.sql  transaction_test.sql
tests/: __init__.py  conftest.py  test_database_helpers.py
uploads/: deb2e461-2ca1-4787-89d3-c5235deae8b7.txt
(+166 files in other folders)
