[project]
name = "filewallball"
version = "0.1.0"
description = "File Wall Ball - Secure file storage and management system"
authors = [
    {name = "FileWallBall Team", email = "team@filewallball.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "redis>=5.0.1",
    "kubernetes>=28.1.0",
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "sqlalchemy>=2.0.23",
    "pymysql>=1.1.0",
    "cryptography>=41.0.7",
    "pillow>=10.2.0",
    "pydantic-settings>=2.1.0",
    "APScheduler>=3.10.4",
    "python-magic>=0.4.27",
    "slowapi>=0.1.9",
    "chardet>=5.2.0",
    "psutil>=5.9.0",
    "structlog>=23.2.0",
    "alembic>=1.16.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=4.2.0",
    "pytest-mock>=3.14.1",
    "httpx>=0.28.1",
    "rich>=13.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
